syntax = "proto3";
package GuardWhale;

option go_package = "github.com/BrianAnakPintar/PhishNet/gen/guardwhalepb"; 

message ScanRequest {
    string url = 1;
}

message ScanResponse { 
    bool allowed = 1;
    string reason = 2;
}

service GuardWhale {
    rpc Scan(ScanRequest) returns (ScanResponse) {}
}
